--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html {
   box-sizing: border-box;
   font-family: 'Karla';
   font-size: 16px;
-  font-weight: 400px;
+  font-weight: 400;
 }
 
 *, *:before, *:after {
@@ -10,8 +10,9 @@ html {
 }
 
 .main-card{
-  width: 700px;
-  height: 350px;
+  width: 100%;
+  max-height: 700px;
+  height: auto;
   margin-left: 10px;
   box-shadow: 4px 10px 5px 0px rgba(0,0,0,0.75);
 }
@@ -19,13 +20,12 @@ html {
 .top-section {
   width: 100%;
   height: 40%;
- margin-left: 10px;
-  line-height: 10px;
+ margin: 10px auto;
+  line-height: 1.5;
   margin-top: 10px;
 }
 
 .bottom-section {
-  width: 100%;
   height: 60%;
   color: white;
   display: flex;
@@ -33,8 +33,8 @@ html {
 
 .bottom-left-section {
   width: 50%;
-  height: 100%;
-  margin-left: 0px;
+  height: auto;
+  
   background-color: #3388b8;
 }
 .bottom-right-section {
@@ -103,7 +103,7 @@ ul {
   list-style: none;
 }
 
-@media (max-width: 720px) {
+@media (max-width: 480px) {
   
   .bottom-section {
     flex-direction: column;
